<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="dhani.iak.com.ipaterpadu.FisikaActivity">

    <LinearLayout
        android:id="@+id/quiz_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/question1f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question1f"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question1_choice1f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice1f" />

            <RadioButton
                android:id="@+id/question1_choice2f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice2f" />

            <RadioButton
                android:id="@+id/question1_choice3f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/question1_choice3f" />
        </RadioGroup>

        <TextView
            android:id="@+id/question2f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question2f"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question2_choice1f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_choice1f" />

            <RadioButton
                android:id="@+id/question2_choice2f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_choice2f" />

            <RadioButton
                android:id="@+id/question2_choice3f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question2_choice3f" />
        </RadioGroup>

        <TextView
            android:id="@+id/question3f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question3f"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question3_choice1f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice1f" />

            <RadioButton
                android:id="@+id/question3_choice2f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice2f" />

            <RadioButton
                android:id="@+id/question3_choice3f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question3_choice3f" />
        </RadioGroup>

        <TextView
            android:id="@+id/question4f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question4f"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question4_choice1f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice1f" />

            <RadioButton
                android:id="@+id/question4_choice2f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice2f" />

            <RadioButton
                android:id="@+id/question4_choice3f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question4_choice3f" />
        </RadioGroup>

        <TextView
            android:id="@+id/question5f"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/question5f"
            android:textColor="@color/primaryText"
            android:textSize="18sp" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/question5_choice1f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_choice1f" />

            <RadioButton
                android:id="@+id/question5_choice2f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_choice2f" />

            <RadioButton
                android:id="@+id/question5_choice3f"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/question5_choice3f" />

        </RadioGroup>

        <Button
            android:id="@+id/submit_answers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="submitAnswers"
            android:text="@string/submit_answers" />

    </LinearLayout>
</ScrollView>