<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/tan_background"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btnFisika"
        style="@style/CategoryStyle"
        android:background="@color/category_numbers"
        android:text="@string/category_fisika"
        android:onClick="openFisika"/>

    <TextView
        android:id="@+id/btnBiologi"
        style="@style/CategoryStyle"
        android:background="@color/category_family"
        android:text="@string/category_biologi" />

    <TextView
        android:id="@+id/btnKimia"
        style="@style/CategoryStyle"
        android:background="@color/category_phrases"
        android:text="@string/category_kimia" />

</LinearLayout>
